Add a few illustrations

--- a/tex/p032.tex
+++ b/tex/p032.tex
@@ -19,7 +19,7 @@
 \vs p032 2:6 \pc Presently, the physical plan of a universe is completed, and the Creator Son, in association with the Creative Spirit, projects his plan of life creation; whereupon does this representation of the Infinite Spirit begin her universe function as a distinct creative personality. When this first creative act is formulated and executed, there springs into being the Bright and Morning Star, the personification of this initial creative concept of identity and ideal of divinity. This is the chief executive of the universe, the personal associate of the Creator Son, one like him in all aspects of character, though markedly limited in the attributes of divinity.
 \vs p032 2:7 And now that the right\hyp{}hand helper and chief executive of the Creator Son has been provided, there ensues the bringing into existence of a vast and wonderful array of diverse creatures. The sons and daughters of the local universe are forthcoming, and soon thereafter the government of such a creation is provided, extending from the supreme councils of the universe to the fathers of the constellations and the sovereigns of the local systems --- the aggregations of those worlds which are designed subsequently to become the homes of the varied mortal races of will creatures; and each of these worlds will be presided over by a Planetary Prince.
 \vs p032 2:8 And then, when such a universe has been so completely organized and so repletely manned, does the Creator Son enter into the Father’s proposal to create mortal man in their divine image.
-\vs p032 2:9 \pc The organization of planetary abodes is still progressing in Nebadon, for this universe is, indeed, a young cluster in the starry and planetary realms of Orvonton. At the last registry there were 3,840,101 inhabited planets in Nebadon, and Satania, the local system of your world, is fairly typical of other systems.
+\vs p032 2:9 \pc The organization of planetary abodes is still progressing in Nebadon, for this universe is, indeed, a young cluster in the starry and planetary realms of Orvonton. At the last registry there were 3,840,101 inhabited planets in Nebadon, and Satania, the local system of your world, is fairly typical of other systems.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/planet-systems.png}\caption{Distribution of 562 Systems by Number of Planets, presumed Solar System type (``One planet'') is marked with green.}\end{figure}}
 \vs p032 2:10 Satania is not a uniform physical system, a single astronomic unit or organization. Its 619 inhabited worlds are located in over 500 different physical systems\fnst{\textbf{over 500 \ldots\ systems}, More precisely: 562 systems, of which 511 are with 1, 46 with 2, 4 with 3 and 1 with 4 inhabited planets.}. Only 5 have more than 2 inhabited worlds, and of these only 1 has 4 peopled planets, while there are 46 having 2 inhabited worlds.
 \vs p032 2:11 The Satania system of inhabited worlds is far removed from Uversa and that great sun cluster which functions as the physical or astronomic centre of the seventh superuniverse. From Jerusem, the headquarters of Satania, it is over 200,000 light\hyp{}years to the physical centre of the superuniverse of Orvonton, far, far away in the dense diameter of the Milky Way. Satania is on the periphery of the local universe, and Nebadon is now well out towards the edge of Orvonton. From the outermost system of inhabited worlds to the centre of the superuniverse is a trifle less than 250,000 light\hyp{}years\fnst{\textbf{250,000 light\hyp{}years}, This implies that the present estimate of the size of Milky Way galaxy (100,000\,ly) is at least five times lower than the actual size thereof.}.
 \vs p032 2:12 The universe of Nebadon now swings far to the south and east in the superuniverse circuit of Orvonton. The nearest neighbouring universes are: Avalon\fnst{\textbf{Avalon}, This word occurs 5 times in the Urantia Papers (\bibref[38:5.1]{p038 5:1}, \bibref[66:2.7]{p066 2:7}, \bibref[67:6.5]{p067 6:5} and \bibref[77:2.6]{p077 2:6}). The word ``Avalon'' first appears in Geoffrey of Monmouth's historical account \bibemph{Historia Regum Britanni\ae} (``The History of the Kings of Britain'', c.~1136) as the place where King Arthur's sword Excalibur (Caliburnus) was forged and later where Arthur was taken to recover from his wounds after the Battle of Camlann --- his final battle (and the word ``Camlann'' signifying ``crooked''). The island was ruled by the enchantress Morgan le Fay and her eight sisters, all of them skilled in the healing arts. In Latin it was called \bibemph{Insula Avallonis} in the \bibemph{Historia}. In the later \bibemph{Vita Merlini} (``The Life of Merlin'', c.~1150) he called it \bibemph{Insula Pomorum} the ``isle of apples''. The name is generally considered to be of Welsh origin (though an Old Cornish or Old Breton origin is also possible), derived from Old Welsh \bibemph{abal}, ``apple'', or \bibemph{aball}, ``apple tree'' (in later Middle Welsh spelled \bibemph{aval, avall;} now Modern Welsh \bibemph{afal, afall}). Sir John Rhys, however (\bibemph{Studies in the Arthurian Legend}, 1891), linked the name Avalon with that of Aballach, a dark Celtic divinity and places Avalon at the west coast in Cornwall. Malory identifies Avalon with Glastonbury in Somerset, and this may be connected with Celtic legends about an ``isle of glass'' inhabited by deceased heroes.}, Henselon, Sanselon, Portalon, Wolvering, Fanoving, and Alvoring.
