--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -31,12 +31,12 @@
 \vs p049 2:15 \ublistelem{2.}\bibnobreakspace \bibemph{The elemental types.} These differentiations have to do with the relation of mortals to water, air, and land, and there are four distinct species of intelligent life as they are related to these habitats. The Urantia races are of the land order.
 \vs p049 2:16 It is quite impossible for you to envisage the environment which prevails during the early ages of some worlds. These unusual conditions make it necessary for the evolving animal life to remain in its marine nursery habitat for longer periods than on those planets which very early provide a hospitable land\hyp{}and\hyp{}atmosphere environment. Conversely, on some worlds of the superbreathers, when the planet is not too large, it is sometimes expedient to provide for a mortal type which can readily negotiate atmospheric passage. These air navigators sometimes intervene between the water and land groups, and they always live in a measure upon the ground, eventually evolving into land dwellers. But on some worlds, for ages they continue to fly even after they have become land\hyp{}type beings.
 \vs p049 2:17 It is both amazing and amusing to observe the early civilization of a primitive race of human beings taking shape, in one case, in the air and treetops and, in another, midst the shallow waters of sheltered tropic basins, as well as on the bottom, sides, and shores of these marine gardens of the dawn races of such extraordinary spheres. Even on Urantia there was a long age during which primitive man preserved himself and advanced his primitive civilization by living for the most part in the treetops as did his earlier arboreal ancestors. And on Urantia you still have a group of diminutive mammals (the bat family) that are air navigators, and your seals and whales, of marine habitat, are also of the mammalian order.
-\vs p049 2:18 In Satania, of the elemental types, 7\% are water, 10\% air, 70\% land, and 13\% combined land\hyp{}and\hyp{}air types. But these modifications of early intelligent creatures are neither human fishes nor human birds. They are of the human and prehuman types, neither superfishes nor glorified birds but distinctly mortal.
+\vs p049 2:18 In Satania, of the elemental types, 7\% are water, 10\% air, 70\% land, and 13\% combined land\hyp{}and\hyp{}air types. But these modifications of early intelligent creatures are neither human fishes nor human birds. They are of the human and prehuman types, neither superfishes nor glorified birds but distinctly mortal.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/elemental-types.png}\caption{Distribution of Elemental Types (\%), Urantia type (``Land'') is marked with green.}\end{figure}}
 \vs p049 2:19 \ublistelem{3.}\bibnobreakspace \bibemph{The gravity types.} By modification of creative design, intelligent beings are so constructed that they can freely function on spheres both smaller and larger than Urantia, thus being, in measure, accommodated to the gravity of those planets which are not of ideal size and density.
 \vs p049 2:20 The various planetary types of mortals vary in height, the average in Nebadon being a trifle under 2.1\,m. Some of the larger worlds are peopled with beings who are only about 76\,cm in height. Mortal stature ranges from here on up through the average heights on the average\hyp{}sized planets to around 3\,m on the smaller inhabited spheres. In Satania there is only one race under 1.2\,m in height. 20\% of the Satania inhabited worlds are peopled with mortals of the modified gravity types occupying the larger and the smaller planets.
 \vs p049 2:21 \ublistelem{4.}\bibnobreakspace \bibemph{The temperature types.} It is possible to create living beings who can withstand temperatures both much higher and much lower than the life range of the Urantia races. There are five distinct orders of beings as they are classified with reference to heat\hyp{}regulating mechanisms. In this scale the Urantia races are number three. 30\% of Satania worlds are peopled with races of modified temperature types. 12\% belong to the higher temperature ranges, 18\% to the lower, as compared with Urantians, who function in the mid\hyp{}temperature group.
 \vs p049 2:22 \ublistelem{5.}\bibnobreakspace \bibemph{The electric types.} The electric, magnetic, and electronic behaviour of the worlds varies greatly. There are ten designs of mortal life variously fashioned to withstand the differential energy of the spheres. These ten varieties also react in slightly different ways to the chemical rays of ordinary sunlight. But these slight physical variations in no way affect the intellectual or the spiritual life.
-\vs p049 2:23 Of the electric groupings of mortal life, almost 23\% belong to class number 4, the Urantia type of existence. These types are distributed as follows: number 1, 1\%; number 2, 2\%; number 3, 5\%; number 4, 23\%; number 5, 27\%; number 6, 24\%; number 7, 8\%; number 8, 5\%; number 9, 3\%; number 10, 2\% --- in whole percentages.
+\vs p049 2:23 Of the electric groupings of mortal life, almost 23\% belong to class number 4, the Urantia type of existence. These types are distributed as follows: number 1, 1\%; number 2, 2\%; number 3, 5\%; number 4, 23\%; number 5, 27\%; number 6, 24\%; number 7, 8\%; number 8, 5\%; number 9, 3\%; number 10, 2\% --- in whole percentages.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/electric-types.png}\caption{Distribution of Electric Types (\%), Urantia type (4) is marked with green.}\end{figure}}
 \vs p049 2:24 \ublistelem{6.}\bibnobreakspace \bibemph{The energizing types.} Not all worlds are alike in the manner of taking in energy. Not all inhabited worlds have an atmospheric ocean suited to respiratory exchange of gases, such as is present on Urantia. During the earlier and the later stages of many planets, beings of your present order could not exist; and when the respiratory factors of a planet are very high or very low, but when all other prerequisites to intelligent life are adequate, the Life Carriers often establish on such worlds a modified form of mortal existence, beings who are competent to effect their life\hyp{}process exchanges directly by means of light\hyp{}energy and the firsthand power transmutations of the Master Physical Controllers.
 \vs p049 2:25 There are six differing types of animal and mortal nutrition: The subbreathers employ the first type of nutrition, the marine dwellers the second, the mid\hyp{}breathers the third, as on Urantia. The superbreathers employ the fourth type of energy intake, while the nonbreathers utilize the fifth order of nutrition and energy. The sixth technique of energizing is limited to the midway creatures.
 \vs p049 2:26 \ublistelem{7.}\bibnobreakspace \bibemph{The unnamed types.} There are numerous additional physical variations in planetary life, but all of these differences are wholly matters of anatomical modification, physiologic differentiation, and electrochemical adjustment. Such distinctions do not concern the intellectual or the spiritual life.
