--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -25,7 +25,7 @@
 \vs p049 2:9 \pc The Satania system contains all of these types and numerous intermediate groups, although some are very sparingly represented.
 \vs p049 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{The atmospheric types.} The physical differences of the worlds of mortal habitation are chiefly determined by the nature of the atmosphere; other influences which contribute to the planetary differentiation of life are relatively minor.
 \vs p049 2:11 The present atmospheric status of Urantia is almost ideal for the support of the breathing type of man, but the human type can be so modified that it can live on both the superatmospheric and the subatmospheric planets. Such modifications also extend to the animal life, which differs greatly on the various inhabited spheres. There is a very great modification of animal orders on both the sub\hyp{} and the superatmospheric worlds.
-\vs p049 2:12 Of the atmospheric types in Satania, about 2.5\% are subbreathers, about 5\% superbreathers, and over 91\% are mid\hyp{}breathers, altogether accounting for 98.5\% of the Satania worlds.
+\vs p049 2:12 Of the atmospheric types in Satania, about 2.5\% are subbreathers, about 5\% superbreathers, and over 91\% are mid\hyp{}breathers, altogether accounting for 98.5\% of the Satania worlds.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/breather-types.png}\caption{Distribution of Atmospheric Types (\%), Urantia type (``Midbreathers'') is marked with green.}\end{figure}}
 \vs p049 2:13 Beings such as the Urantia races are classified as mid\hyp{}breathers; you represent the average or typical breathing order of mortal existence. If intelligent creatures should exist on a planet with an atmosphere similar to that of your near neighbour, Venus, they would belong to the superbreather group, while those inhabiting a planet with an atmosphere as thin as that of your outer neighbour, Mars, would be denominated subbreathers.
 \vs p049 2:14 If mortals should inhabit a planet devoid of air, like your moon, they would belong to the separate order of nonbreathers. This type represents a radical or extreme adjustment to the planetary environment and is separately considered. Nonbreathers account for the remaining 1.5\% of Satania worlds.
 \vs p049 2:15 \ublistelem{2.}\bibnobreakspace \bibemph{The elemental types.} These differentiations have to do with the relation of mortals to water, air, and land, and there are four distinct species of intelligent life as they are related to these habitats. The Urantia races are of the land order.
