--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -224,6 +224,6 @@
 \iftotalfigures
   \clp
   \bibpdfbookmark{LIST OF FIGURES}{fig}%
-  \listoffigures
+  \normalsize\listoffigures
 \fi
 \end{document}
