Tidy up the wording of the note about 12 senses

--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -50,7 +50,7 @@
 \usection{4.\bibnobreakspace Evolutionary Will Creatures}
 \vs p049 4:1 There are great differences between the mortals of the different worlds, even among those belonging to the same intellectual and physical types, but all mortals of will dignity are erect animals, bipeds.
 \vs p049 4:2 There are six basic evolutionary races: three primary --- red, yellow, and blue; and three secondary --- orange, green, and indigo. Most inhabited worlds have all of these races, but many of the three\hyp{}brained planets harbour only the three primary types. Some local systems also have only these three races.
-\vs p049 4:3 The average special physical\hyp{}sense endowment of human beings is 12\fnst{\textbf{12}, It was Rudolf Steiner who first suggested the idea of 12 senses. His theory was later developed by others, e.g. Appli, Kranich, Schoorel, Soesman et al. Steiner's 12 senses are grouped as follows:\begin{itemize}\item Lower (0-7 years): life, touch, movement, balance. \item Feeling (7-14 years): sight, smell, taste, warmth. \item Cognitive (14-21 years): hearing, speech, thought, ego.\end{itemize} On the other hand, these being the \bibemph{physical} senses, they are probably mapped to the 12 \bibemph{cranial nerves}: olfactory, optic, motor oculi, patheticus, tri\hyp{}facial, abducens, facial nerve, auditory, glossopharyngeal. But the number of cranial nerves is always exact, so why does the text refer to the \bibemph{average} endowment?}, though the special senses of the three\hyp{}brained mortals are extended slightly beyond those of the one\hyp{} and two\hyp{}brained types; they can see and hear considerably more than the Urantia races.
+\vs p049 4:3 The average special physical\hyp{}sense endowment of human beings is 12\fnst{\textbf{12}, It was Rudolf Steiner who first suggested the idea of 12 senses. His theory was later developed by others, e.g. Appli, Kranich, Schoorel, Soesman et al. Steiner's 12 senses are grouped as follows:\begin{itemize}\item Lower (0-7 years): life, touch, movement, balance. \item Feeling (7-14 years): sight, smell, taste, warmth. \item Cognitive (14-21 years): hearing, speech, thought, ego.\end{itemize} On the other hand, these are not all \bibemph{physical} senses, which are probably more accurately mapped to the 12 \bibemph{cranial nerves}: olfactory, optic, motor oculi, patheticus, tri\hyp{}facial, abducens, facial nerve, auditory, glossopharyngeal. But the number of cranial nerves is always exact, so why does the text refer to the \bibemph{average} endowment?}, though the special senses of the three\hyp{}brained mortals are extended slightly beyond those of the one\hyp{} and two\hyp{}brained types; they can see and hear considerably more than the Urantia races.
 \vs p049 4:4 Young are usually born singly, multiple births being the exception, and the family life is fairly uniform on all types of planets. Sex equality prevails on all advanced worlds; male and female are equal in mind endowment and spiritual status. We do not regard a planet as having emerged from barbarism so long as one sex seeks to tyrannize over the other. This feature of creature experience is always greatly improved after the arrival of a Material Son and Daughter.
 \vs p049 4:5 \pc Seasons and temperature variations occur on all sunlighted and sun\hyp{}heated planets. Agriculture is universal on all atmospheric worlds; tilling the soil is the one pursuit that is common to the advancing races of all such planets.
 \vs p049 4:6 Mortals all have the same general struggles with microscopic foes in their early days, such as you now experience on Urantia, though perhaps not so extensive. The length of life varies on the different planets from 25 years on the primitive worlds to near 500 on the more advanced and older spheres.
