--- a/tex/title.tex
+++ b/tex/title.tex
@@ -86,6 +86,7 @@ Edited by Tigran Aivazian\\[2ex]
 \begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
+\tunemarkup{pgkobomini}{\fontsize{9}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus10}{\fontsize{12}{16}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
