--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -894,8 +894,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\large\bfseries}
-\newcommand{\bibpapertitlefont}{\Large\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\large\bfseries}
+\newcommand{\bibpapertitlefont}{\headingfont\Large\bfseries}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
@@ -923,8 +923,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\normalsize\bfseries}
-\newcommand{\bibpapertitlefont}{\large\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\normalsize\bfseries}
+\newcommand{\bibpapertitlefont}{\headingfont\large\bfseries}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
@@ -956,8 +956,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{6.3}{6.3}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{6}{6}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\fontsize{12}{14.5}\selectfont}
-\newcommand{\bibpapertitlefont}{\fontsize{15}{23}\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\fontsize{12}{14.5}\selectfont}
+\newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{23}\bfseries}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -994,8 +994,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\large\selectfont}
-\newcommand{\bibpapertitlefont}{\Large\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\large\selectfont}
+\newcommand{\bibpapertitlefont}{\headingfont\Large\bfseries}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -1010,11 +1010,11 @@
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7}{11}\selectfont}
 \newcommand{\bibsectitlefont}{\headingfont\fontsize{10}{10}\selectfont}
-\renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{12}{14}\selectfont}
+\renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
 \def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
-\newcommand{\bibbookend}{\fontsize{14.7}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{14.7/19}
+\newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{18/20}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{25}{9}\bfseries\itshape}%
 }
 
@@ -1029,8 +1029,8 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubgreen}{ahb}}}
-\newcommand{\bibpaperfont}{\fontsize{13}{15}\selectfont}
-\newcommand{\bibpapertitlefont}{\fontsize{15}{17}\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\fontsize{13}{15}\selectfont}
+\newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{17}\bfseries}
 \newcommand{\bibtocsuperheadfont}{\fontsize{18}{20}\selectfont}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{12}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7.6}{13}\selectfont}
@@ -1063,8 +1063,8 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubgreen}{ahb}}}
-\newcommand{\bibpaperfont}{\fontsize{13}{15}\selectfont}
-\newcommand{\bibpapertitlefont}{\fontsize{15}{17}\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\fontsize{13}{15}\selectfont}
+\newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{17}\bfseries}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{16}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{9.9}{13.6}\selectfont}
@@ -1103,8 +1103,8 @@
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{12}{15}\selectfont}
 \newcommand{\bibbookend}{\fontsize{14}{17}\selectfont}
 \newcommand{\urantiamainfontsize}{14/17}
-\newcommand{\bibpaperfont}{\fontsize{16}{19}\selectfont}
-\newcommand{\bibpapertitlefont}{\fontsize{18}{19}\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\fontsize{16}{19}\selectfont}
+\newcommand{\bibpapertitlefont}{\headingfont\fontsize{18}{19}\bfseries}
 \newcommand{\bibsectitlefont}{\fontsize{15}{15}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{13.0}{13.0}\selectfont}
@@ -1135,8 +1135,8 @@
 \renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
 \renewcommand{\bibbookend}{\fontsize{13.9}{16}\selectfont}
 \renewcommand{\urantiamainfontsize}{13.9/16}
-\newcommand{\bibpaperfont}{\fontsize{17}{20}\bfseries}
-\newcommand{\bibpapertitlefont}{\fontsize{21}{22}\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\fontsize{17}{20}\bfseries}
+\newcommand{\bibpapertitlefont}{\headingfont\fontsize{21}{22}\bfseries}
 \newcommand{\bibsectitlefont}{\fontsize{15}{15}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{12.0}{12.0}\selectfont}
@@ -1165,8 +1165,8 @@
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
 \newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
 \newcommand{\urantiamainfontsize}{17/19}
-\newcommand{\bibpaperfont}{\fontsize{15.0}{18}\bfseries}
-\newcommand{\bibpapertitlefont}{\fontsize{16.0}{19.0}\bfseries}
+\newcommand{\bibpaperfont}{\headingfont\fontsize{15.0}{18}\bfseries}
+\newcommand{\bibpapertitlefont}{\headingfont\fontsize{16.0}{19.0}\bfseries}
 \newcommand{\bibsectitlefont}{\fontsize{10}{10}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{9.6}{9.6}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{10.0}{10.0}\selectfont}
