Add an illustration

--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -77,7 +77,7 @@
 \vs p049 5:17 While the three\hyp{}brained peoples are capable of a slightly higher planetary evolution than either the one\hyp{} or two\hyp{}brained orders, all have the same type of life plasm and carry on planetary activities in very similar ways, much as do human beings on Urantia. These three types of mortals are distributed throughout the worlds of the local systems. In the majority of cases planetary conditions had very little to do with the decisions of the Life Carriers to project these varied orders of mortals on the different worlds; it is a prerogative of the Life Carriers thus to plan and execute.
 \vs p049 5:18 These three orders stand on an equal footing in the ascension career. Each must traverse the same intellectual scale of development, and each must master the same spiritual tests of progression. The system administration and the constellation overcontrol of these different worlds are uniformly free from discrimination; even the regimes of the Planetary Princes are identical.
 \vs p049 5:19 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit\hyp{}reception series.} There are three groups of mind design as related to contact with spirit affairs. This classification does not refer to the one-, two-, and three\hyp{}brained orders of mortals; it refers primarily to gland chemistry, more particularly to the organization of certain glands comparable to the pituitary bodies. The races on some worlds have one gland, on others two, as do Urantians\fnst{\textbf{two, as do Urantians}, my original conjecture was that the second gland here referred to is in fact the pineal gland or epiphysis. The hypophysis and epiphysis correspond to the 6\ts{th} and 7\ts{th} chakras, which in the Urantia Papers are called ``adjutant mind\hyp{}spirits'', so the ``opening of the 3\ts{rd} eye'' (enlightenment) would correspond to the synchronized action of the two higher adjutants (worship and wisdom), coordinating the lower chakra activities. However, in his book ``The Truth About Spiritualism'' (1923, pp.40--41), Dr~William Sadler mentions the anterior and posterior lobes of the human pituitary gland. He also notes: \bibemph{``man possesses a larger anterior lobe and is therefore more gifted in analytical reason and more reliable in mature judgment; but woman, because of this fact that she has a superior posterior lobe of the pituitary gland, has more ability when it comes to sizing up and prognosticating human character.''}}, while on still other spheres the races have three of these unique bodies. The inherent imagination and spiritual receptivity is definitely influenced by this differential chemical endowment.
-\vs p049 5:20 Of the spirit\hyp{}reception types, 65\% are of the second group, like the Urantia races. 12\% are of the first type, naturally less receptive, while 23\% are more spiritually inclined during terrestrial life. But such distinctions do not survive natural death; all of these racial differences pertain only to the life in the flesh.
+\vs p049 5:20 Of the spirit\hyp{}reception types, 65\% are of the second group, like the Urantia races. 12\% are of the first type, naturally less receptive, while 23\% are more spiritually inclined during terrestrial life. But such distinctions do not survive natural death; all of these racial differences pertain only to the life in the flesh.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/spirit-reception-types.png}\caption{Distribution of Spirit Reception Types (\%), Urantia type (``Two glands'') is marked with green.}\end{figure}}
 \vs p049 5:21 \ublistelem{4.}\bibnobreakspace \bibemph{Planetary\hyp{}mortal epochs.} This classification recognizes the succession of temporal dispensations as they affect man’s terrestrial status and his reception of celestial ministry.
 \vs p049 5:22 Life is initiated on the planets by the Life Carriers, who watch over its development until sometime after the evolutionary appearance of mortal man. Before the Life Carriers leave a planet, they duly install a Planetary Prince as ruler of the realm. With this ruler there arrives a full quota of subordinate auxiliaries and ministering helpers, and the first adjudication of the living and the dead is simultaneous with his arrival.
 \vs p049 5:23 With the emergence of human groupings, this Planetary Prince arrives to inaugurate human civilization and to focalize human society. Your world of confusion is no criterion of the early days of the reign of the Planetary Princes, for it was near the beginning of such an administration on Urantia that your Planetary Prince, Caligastia, cast his lot with the rebellion of the System Sovereign, Lucifer. Your planet has pursued a stormy course ever since.
