--- a/tex/p066.tex
+++ b/tex/p066.tex
@@ -1,7 +1,7 @@
 \upaper{66}{The Planetary Prince of Urantia}
 \author{Melchizedek}
 \vs p066 0:1 The advent of a Lanonandek Son on an average world signifies that will, the ability to choose the path of eternal survival, has developed in the mind of primitive man. But on Urantia the Planetary Prince arrived almost 500,000 years after the appearance of human will.
-\vs p066 0:2 About 500,000 years ago and concurrent with the appearance of the six coloured or Sangik races, Caligastia, the Planetary Prince, arrived on Urantia. There were almost $5 \times 10^8$ primitive human beings on earth at the time of the Prince’s arrival, and they were well scattered over Europe, Asia, and Africa. The Prince’s headquarters, established in Mesopotamia, was at about the centre of world population.
+\vs p066 0:2 About 500,000 years ago and concurrent with the appearance of the six coloured or Sangik races, Caligastia, the Planetary Prince, arrived on Urantia. There were almost 500,000,000 primitive human beings on earth at the time of the Prince’s arrival, and they were well scattered over Europe, Asia, and Africa. The Prince’s headquarters, established in Mesopotamia, was at about the centre of world population.
 \usection{1.\bibnobreakspace Prince Caligastia}
 \vs p066 1:1 Caligastia was a Lanonandek Son, number 9,344 of the secondary order. He was experienced in the administration of the affairs of the local universe in general and, during later ages, with the management of the local system of Satania in particular.
 \vs p066 1:2 Prior to the reign of Lucifer in Satania, Caligastia had been attached to the council of the Life Carrier advisers on Jerusem. Lucifer elevated Caligastia to a position on his personal staff, and he acceptably filled five successive assignments of honour and trust.
