Update the Introduction

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,12 +17,17 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{14}{18}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{14}{16}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
-\bibemph{The British Study Edition of The Urantia Papers} has the following main features:
+The purpose of the Fifth Epochal Revelation is to expand cosmic consciousness and enhance spiritual perception of those who
+peruse it.
+The high ideal and example of the life of Jesus is needed especially today,
+in the times of planetary crisis and pandemia of fear and madness, caused by intellectual ignorance and spiritual blindness.
+
+The technical peculiarities of \bibemph{The British Study Edition of The Urantia Papers} are as follows:
 
 \begin{itemize}
 \item The revised text of \bibemph{The Urantia Papers} (also known as the SRT) is based on the original Fifth Epochal Revelation,
@@ -67,7 +72,7 @@ Clicking on the Paper's title in the quiz section will return you back to that P
 \textcolor{ubdarkblue}{%
 \authorfont
 \tunemarkup{pgnexus7}{\fontsize{19}{25}}
-\tunemarkup{pgnexus10}{\fontsize{24}{32}}
+\tunemarkup{pgnexus10}{\fontsize{22}{30}}
 \tunemarkup{pgkoboaurahd}{\fontsize{16}{22}}
 \tunemarkup{pgkauraone}{\fontsize{22}{30}}
 \tunemarkup{pgafour}{\fontsize{30}{40}}
