Enlarge the figure

--- a/tex/p114.tex
+++ b/tex/p114.tex
@@ -58,7 +58,7 @@
 \vs p114 6:13 \ublistelem{9.}\bibnobreakspace \bibemph{The home seraphim.} Urantia now enjoys the services of the fifth group of angelic ministers dedicated to the preservation and advancement of the home, the basic institution of human civilization.
 \vs p114 6:14 \ublistelem{10.}\bibnobreakspace \bibemph{The angels of industry.} This seraphic group is concerned with fostering industrial development and improving economic conditions among the Urantia peoples. This corps has been seven times changed since the bestowal of Michael.
 \vs p114 6:15 \ublistelem{11.}\bibnobreakspace \bibemph{The angels of diversion.} These are the seraphim who foster the values of play, humour, and rest. They ever seek to uplift man’s recreational diversions and thus to promote the more profitable utilization of human leisure. The present corps is the third of that order to minister on Urantia.
-\vs p114 6:16 \ublistelem{12.}\bibnobreakspace \bibemph{The angels of superhuman ministry.} These are the angels of the angels, those seraphim who are assigned to the ministry of all other superhuman life on the planet, temporary or permanent. This corps has served since the beginning of the current dispensation.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/angelic-corps.png}\caption{Performance of the Angelic Corps.}\end{figure}}
+\vs p114 6:16 \ublistelem{12.}\bibnobreakspace \bibemph{The angels of superhuman ministry.} These are the angels of the angels, those seraphim who are assigned to the ministry of all other superhuman life on the planet, temporary or permanent. This corps has served since the beginning of the current dispensation.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=1.3\columnwidth]{images/angelic-corps.png}\caption{Performance of the Angelic Corps.}\end{figure}}
 \vs p114 6:17 \pc When these groups of master seraphim disagree in matters of planetary policy or procedure, their differences are usually composed by the governor general, but all his rulings are subject to appeal in accordance with the nature and gravity of the issues involved in the disagreement.
 \vs p114 6:18 None of these angelic groups exercise direct or arbitrary control over the domains of their assignment. They cannot fully control the affairs of their respective realms of action, but they can and do so manipulate planetary conditions and so associate circumstances as favourably to influence the spheres of human activity to which they are attached.
 \vs p114 6:19 The master seraphim of planetary supervision utilize many agencies for the prosecution of their missions. They function as ideational clearinghouses, mind focalizers, and project promoters. While unable to inject new and higher conceptions into human minds, they often act to intensify some higher ideal which has already appeared within a human intellect.
