Remove some of the doubtful etymologies.

--- a/tex/p053.tex
+++ b/tex/p053.tex
@@ -47,7 +47,7 @@
 \vs p053 6:5 “Having been automatically thrown out of the constellation circuits by the secession of Lucifer, we were dependent on the loyalty of our intelligence corps, who forwarded calls for help to Edentia from the near\hyp{}by system of Rantulia; and we found that the kingdom of order, the intellect of loyalty, and the spirit of truth were inherently triumphant over rebellion, self\hyp{}assertion, and so\hyp{}called personal liberty; we were able to carry on until the arrival of the new System Sovereign, the worthy successor of Lucifer. And immediately thereafter I was assigned to the corps of the Melchizedek receivership of Urantia, assuming jurisdiction over the loyal seraphic orders on the world of the traitorous Caligastia, who had proclaimed his sphere a member of the newly projected system of ‘liberated worlds and emancipated personalities’ proposed in the infamous Declaration of Liberty issued by Lucifer in his call to the ‘liberty\hyp{}loving, free\hyp{}thinking, and forward\hyp{}looking intelligences of the misruled and maladministered worlds of Satania.’”
 \vs p053 6:6 \pc This angel is still in service on Urantia, functioning as associate chief of seraphim.
 \usection{7.\bibnobreakspace History of the Rebellion}
-\vs p053 7:1 The Lucifer rebellion was system wide. 37 seceding Planetary Princes swung their world administrations largely to the side of the archrebel. Only on Panoptia\fnst{\textbf{Panoptia}, is a coined word from the Greek prefix \textit{pan-} ``all'' and Greek \textit{optos} ``visible'', resulting in the probable meaning of ``the place of those who see all (or ``see the big picture'').} did the Planetary Prince fail to carry his people with him. On this world, under the guidance of the Melchizedeks, the people rallied to the support of Michael. Ellanora\fnst{\textbf{Ellanora}, possibly derived from the Greek \textit{eleos} ``mercy'' and Hebrew \textit{nur} ``shining'', combined to give the meaning ``the one shining with mercy''.}, a young woman of that mortal realm, grasped the leadership of the human races, and not a single soul on that strife\hyp{}torn world enlisted under the Lucifer banner. And ever since have these loyal Panoptians served on the seventh Jerusem transition world as the caretakers and builders on the Father’s sphere and its surrounding seven detention worlds. The Panoptians not only act as the literal custodians of these worlds, but they also execute the personal orders of Michael for the embellishment of these spheres for some future and unknown use. They do this work as they tarry en route to Edentia.
+\vs p053 7:1 The Lucifer rebellion was system wide. 37 seceding Planetary Princes swung their world administrations largely to the side of the archrebel. Only on Panoptia did the Planetary Prince fail to carry his people with him. On this world, under the guidance of the Melchizedeks, the people rallied to the support of Michael. Ellanora\fnst{\textbf{Ellanora}, possibly derived from the Greek \textit{eleos} ``mercy'' and Hebrew \textit{nur} ``shining'', combined to give the meaning ``the one shining with mercy''.}, a young woman of that mortal realm, grasped the leadership of the human races, and not a single soul on that strife\hyp{}torn world enlisted under the Lucifer banner. And ever since have these loyal Panoptians served on the seventh Jerusem transition world as the caretakers and builders on the Father’s sphere and its surrounding seven detention worlds. The Panoptians not only act as the literal custodians of these worlds, but they also execute the personal orders of Michael for the embellishment of these spheres for some future and unknown use. They do this work as they tarry en route to Edentia.
 \vs p053 7:2 Throughout this period Caligastia was advocating the cause of Lucifer on Urantia. The Melchizedeks ably opposed the apostate Planetary Prince, but the sophistries of unbridled liberty and the delusions of self\hyp{}assertion had every opportunity for deceiving the primitive peoples of a young and undeveloped world.
 \vs p053 7:3 All secession propaganda had to be carried on by personal effort because the broadcast service and all other avenues of interplanetary communication were suspended by the action of the system circuit supervisors. Upon the actual outbreak of the insurrection the entire system of Satania was isolated in both the constellation and the universe circuits. During this time all incoming and outgoing messages were dispatched by seraphic agents and Solitary Messengers. The circuits to the fallen worlds were also cut off, so that Lucifer could not utilize this avenue for the furtherance of his nefarious scheme. And these circuits will not be restored so long as the archrebel lives within the confines of Satania.
 \vs p053 7:4 This was a Lanonandek rebellion. The higher orders of local universe sonship did not join the Lucifer secession, although a few of the Life Carriers stationed on the rebel planets were somewhat influenced by the rebellion of the disloyal princes. None of the Trinitized Sons went astray. The Melchizedeks, archangels, and the Brilliant Evening Stars were all loyal to Michael and, with Gabriel, valiantly contended for the Father’s will and the Son’s rule.
