--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -1,10 +1,10 @@
 \upaper{0}{Foreword}
 \author{Divine Counsellor}
-\vs p000 0:1 In the minds of the mortals of Urantia\fnst{\textbf{Urantia}, pronounced \textit{oor\'anteeya}, is a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, probably signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton\fnst{\textbf{Orvonton}, is a coined word from the Old English prefix \textit{or-} ``out'', the Middle English \textit{wone} (> \textit{von}) ``dwelling place'' and the Old English \textit{tun} ``town'', resulting in the total meaning of ``the out-dwelling town''.} corps of truth revealers have been authorized\fnst{\textbf{Orvonton \ldots\ authorized}, Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{\textbf{English language}, One possible reason why these revelations were given in English, rather than in Russian is because the greatest spiritual teacher on Urantia (after Jesus) Lev Nikolaevich Tolstoy has already given Russia the complete and most accurate restatement of Jesus' teachings about half a century earlier. This includes both the teachings of the ``Gospel of Jesus'' and the ``Nonresistance to Evil''. And his complete works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 23, 24, 25, and 45 of the 90-volume set. On p.~315 of ``The Physiology of Faith and Fear'' Dr~William S.~Sadler writes: Tolstoi once called faith ``the force of life.''} of Urantia.
+\vs p000 0:1 In the minds of the mortals of Urantia\fnst{\textbf{Urantia}, pronounced \textit{oor\'anteeya}, may be a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton corps of truth revealers have been authorized\fnst{\textbf{Orvonton \ldots\ authorized}, Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language of Urantia.
 \vs p000 0:2 It is exceedingly difficult to present enlarged concepts and advanced truth, in our endeavour to expand cosmic consciousness and enhance spiritual perception, when we are restricted to the use of a circumscribed language of the realm. But our mandate admonishes us to make every effort to convey our meanings by using the word symbols of the English tongue. We have been instructed to introduce new terms only when the concept to be portrayed finds no terminology in English which can be employed to convey such a new concept partially or even with more or less distortion of meaning.
 \vs p000 0:3 In the hope of facilitating comprehension and of preventing confusion on the part of every mortal who may peruse these papers, we deem it wise to present in this initial statement an outline of the meanings to be attached to numerous English words which are to be employed in designation of Deity and certain associated concepts of the things, meanings, and values of universal reality.
 \vs p000 0:4 But in order to formulate this Foreword of definitions and limitations of terminology, it is necessary to anticipate the usage of these terms in the subsequent presentations. This Foreword is not, therefore, a finished statement within itself;\fnst{\textbf{anticipate the usage \ldots\ statement within itself}, And why \bibemph{exactly} does the need to anticipate the usage of terms make this Foreword an unfinished statement? I could not answer this question until I remembered the difficulty encountered when studying the ancient Hebrew poetry. Not prose, but \bibemph{poetry}. Namely, the paucity of language makes the reading of poetry orders of magnitude more complex than prose. The fundamental fact is that the true meaning of any word is not the paragraph or two found in its dictionary definition, but rather the entire usage thereof in the whole body of literature, everywhere it is encountered. Hebrew poetry provides a clear and relatively compact illustration of this, because to \bibemph{really} understand one verse you often need to re-read many times the entire body of literature (i.e. all three books of Hebrew poetry: Psalms, Proverbs and Job) and this is what makes reading poetry hundreds, if not thousands, times harder than prose. Likewise, here the paucity of English language makes the mere ``dictionary definitions'' incomplete, unfinished and they must be supplemented by the entire ``body of literature'', i.e. the 31 subsequent presentations where each of these definitions is encountered. Therefore, the terms defined here might still have different meanings later on and this is what makes this Foreword an unfinished statement, i.e. it cannot be ``finished'' without the entirety of all the contexts where all the terms are used.} it is only a definitive guide designed to assist those who shall read the accompanying papers dealing with Deity and the universe of universes\fnst{\textbf{papers dealing with Deity and the universe of universes}, As already noted at \bibref[0:0.1]{p000 0:1} these are limited to papers 1--31 only. Therefore, this Foreword is properly ``the Foreword to Part I of the Urantia Papers'' and that is where it should be printed. Curiously, this is where the Foreword is found in ``The Titles of the Papers'' and ``Contents of the Book'' as printed in the original 1955 edition, although the text of the Foreword is printed just before the Part I title page preceding Paper 1 of that edition.} which have been formulated by an Orvonton commission sent to Urantia for this purpose.
-\vs p000 0:5 \pc Your world, Urantia, is one of many similar inhabited planets which comprise the local universe of \bibemph{Nebadon}\fnst{\textbf{\bibemph{Nebadon}}, is a coined word from the Old English \textit{adune} (> \textit{dune} > \textit{dun} > \textit{don}) ``off the hill'', resulting in the probable total meaning of ``the nebular hill''. Indeed, the Nebadon (local universe) level of our ascension is a relative `hill', compared to the system-level mansion world experience.}. This universe, together with similar creations, makes up the superuniverse of \bibemph{Orvonton,} from whose capital, Uversa\fnst{\textbf{Uversa}, is a coined word from the Latin \textit{versatilis} ``capable of turning or being turned around'', signifying the centre of the superuniverse expressing the 7\ts{th} expression of the Father-Son-Spirit pattern: `U' being the 21\ts{st} letter of English alphabet: $21=3\times 7$. The name of the capital of the first evolutionary superuniverse, under this scheme, would be ``Cversa'', of the second --- ``Fversa'', and so on.}, our commission hails. Orvonton is one of the seven evolutionary superuniverses of time and space which circle the never\hyp{}beginning, never\hyp{}ending creation of divine perfection --- the central universe of \bibemph{Havona.} At the heart of this eternal and central universe is the stationary Isle of Paradise, the geographic centre of infinity and the dwelling place of the eternal God.
+\vs p000 0:5 \pc Your world, Urantia, is one of many similar inhabited planets which comprise the local universe of \bibemph{Nebadon}. This universe, together with similar creations, makes up the superuniverse of \bibemph{Orvonton,} from whose capital, Uversa, our commission hails. Orvonton is one of the seven evolutionary superuniverses of time and space which circle the never\hyp{}beginning, never\hyp{}ending creation of divine perfection --- the central universe of \bibemph{Havona.} At the heart of this eternal and central universe is the stationary Isle of Paradise, the geographic centre of infinity and the dwelling place of the eternal God.
 \vs p000 0:6 The seven evolving superuniverses in association with the central and divine universe, we commonly refer to as the \bibemph{grand universe;} these are the now organized and inhabited creations. They are all a part of the \bibemph{master universe,} which also embraces the uninhabited but mobilizing universes of outer space.
 \usection{1.\bibnobreakspace Deity and Divinity}
 \vs p000 1:1 The universe of universes presents phenomena of deity\fnst{\textbf{deity}, In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
@@ -20,7 +20,7 @@
 \vs p000 1:11 \pc \bibemph{The finite level} of reality is characterized by creature life and time\hyp{}space limitations. Finite realities may not have endings, but they always have beginnings --- they are created. The Deity level of Supremacy may be conceived as a function in relation to finite existences.
 \vs p000 1:12 \pc \bibemph{The absonite level} of reality is characterized by things and beings without beginnings or endings and by the transcendence of time and space. Absoniters are not created; they are eventuated --- they simply are. The Deity level of Ultimacy connotes a function in relation to absonite realities. No matter in what part of the master universe, whenever time and space are transcended, such an absonite phenomenon is an act of the Ultimacy of Deity.
 \vs p000 1:13 \pc \bibemph{The absolute level} is beginningless, endless, timeless, and spaceless. For example: On Paradise, time and space are nonexistent; the time\hyp{}space status of Paradise is absolute. This level is Trinity attained, existentially, by the Paradise Deities, but this third level of unifying Deity expression is not fully unified experientially. Whenever, wherever, and however the absolute level of Deity functions, Paradise\hyp{}absolute values and meanings are manifest.
-\vs p000 1:14 \pc Deity may be existential\fnst{\textbf{existential}, Defined at \bibref[0:7.3]{p000 7:3} as ``beings of eternal existence, past, present, and future''.}, as in the Eternal Son; experiential\fnst{\textbf{experiential}, Defined at \bibref[0:7.4]{p000 7:4} as ``beings actualizing in the post\hyp{}Havona present but of unending existence throughout all future eternity''.}, as in the Supreme Being; associative, as in God the Sevenfold; undivided, as in the Paradise Trinity.
+\vs p000 1:14 \pc Deity may be existential as in the Eternal Son; experiential, as in the Supreme Being; associative, as in God the Sevenfold; undivided, as in the Paradise Trinity.
 \vs p000 1:15 Deity is the source of all that which is divine. Deity is characteristically and invariably divine, but all that which is divine is not necessarily Deity, though it will be co\hyp{}ordinated with Deity and will tend towards some phase of unity with Deity --- spiritual, mindal, or personal.
 \vs p000 1:16 \pc DIVINITY is the characteristic, unifying, and co\hyp{}ordinating quality of Deity.
 \vs p000 1:17 Divinity is creature comprehensible as truth, beauty, and goodness; correlated in personality as love, mercy, and ministry; disclosed on impersonal levels as justice, power, and sovereignty.
