Make mobile build default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -8,9 +8,9 @@
 
 % various page sizes
 %\tunemarkuptag{pghanlin}
-%\tunemarkuptag{pgnexus7}
+\tunemarkuptag{pgnexus7}
 %\tunemarkuptag{pgnexus10}
-\tunemarkuptag{pgkoboaurahd}
+%\tunemarkuptag{pgkoboaurahd}
 %\tunemarkuptag{pgauraone}
 %\tunemarkuptag{pgafour}
 %\tunemarkuptag{pgcrownq}
