Add an illustration

--- a/tex/p136.tex
+++ b/tex/p136.tex
@@ -81,7 +81,7 @@
 \vs p136 9:4 As the days passed, with ever\hyp{}increasing clearness Jesus perceived what kind of a truth\hyp{}revealer he was to become. He discerned that God’s way was not going to be the easy way. He began to realize that the cup of the remainder of his human experience might possibly be bitter, but he decided to drink it.
 \vs p136 9:5 Even his human mind is saying good\hyp{}bye to the throne of David. Step by step this human mind follows in the path of the divine. The human mind still asks questions but unfailingly accepts the divine answers as final rulings in this combined life of living as a man in the world while all the time submitting unqualifiedly to the doing of the Father’s eternal and divine will.
 \vs p136 9:6 Rome was mistress of the Western world. The Son of Man, now in isolation and achieving these momentous decisions, with the hosts of heaven at his command, represented the last chance of the Jews to attain world dominion; but this earthborn Jew, who possessed such tremendous wisdom and power, declined to use his universe endowments either for the aggrandizement of himself or for the enthronement of his people. He saw, as it were, “the kingdoms of this world,” and he possessed the power to take them. The Most Highs of Edentia had resigned all these powers into his hands, but he did not want them. The kingdoms of earth were paltry things to interest the Creator and Ruler of a universe. He had only one objective, the further revelation of God to man, the establishment of the kingdom, the rule of the heavenly Father in the hearts of mankind.
-\vs p136 9:7 The idea of battle, contention, and slaughter was repugnant to Jesus; he would have none of it. He would appear on earth as the Prince of Peace to reveal a God of love. Before his baptism he had again refused the offer of the Zealots to lead them in rebellion against the Roman oppressors. And now he made his final decision regarding those Scriptures which his mother had taught him, such as: “The Lord has said to me, ‘You are my Son; this day have I begotten you. Ask of me, and I will give you the heathen for your inheritance and the uttermost parts of the earth for your possession. You shall break them with a rod of iron; you shall dash them in pieces like a potter’s vessel.’”
+\vs p136 9:7 The idea of battle, contention, and slaughter was repugnant to Jesus; he would have none of it. He would appear on earth as the Prince of Peace to reveal a God of love. Before his baptism he had again refused the offer of the Zealots to lead them in rebellion against the Roman oppressors. And now he made his final decision regarding those Scriptures which his mother had taught him, such as: “The Lord has said to me, ‘You are my Son; this day have I begotten you. Ask of me, and I will give you the heathen for your inheritance and the uttermost parts of the earth for your possession. You shall break them with a rod of iron; you shall dash them in pieces like a potter’s vessel.’”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Akiane.png}\caption{The Prince of Peace by Akaine Kramaric}\end{figure}}
 \vs p136 9:8 Jesus of Nazareth reached the conclusion that such utterances did not refer to him. At last, and finally, the human mind of the Son of Man made a clean sweep of all these Messianic difficulties and contradictions --- Hebrew scriptures, parental training, chazan teaching, Jewish expectations, and human ambitious longings; once and for all he decided upon his course. He would return to Galilee and quietly begin the proclamation of the kingdom and trust his Father (the Personalized Adjuster) to work out the details of procedure day by day.
 \vs p136 9:9 \pc By these decisions Jesus set a worthy example for every person on every world throughout a vast universe when he refused to apply material tests to prove spiritual problems, when he refused presumptuously to defy natural laws. And he set an inspiring example of universe loyalty and moral nobility when he refused to grasp temporal power as the prelude to spiritual glory.
 \vs p136 9:10 \pc If the Son of Man had any doubts about his mission and its nature when he went up in the hills after his baptism, he had none when he came back to his fellows following the 40 days of isolation and decisions.
