Correct a typo in the quiz.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -5502,7 +5502,7 @@
 {Michael himself}{0}
 \qstop
 
-\qstart{Why was the family of Joseph choosen by Gabriel rather than Michael?}
+\qstart{Why was the family of Joseph chosen by Gabriel rather than Michael?}
 {They flipped the coin and it fell on Gabriel}{0}
 {Immanuel asked Gabriel to do this}{0}
 {Michael asked Gabriel to do this}{0}
