Add the Bibliography of human sources to Foreword Also mention this new feature in the Introduction

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -25,12 +25,12 @@
 \vs p000 1:16 \pc DIVINITY is the characteristic, unifying, and co\hyp{}ordinating quality of Deity.
 \vs p000 1:17 Divinity is creature comprehensible as truth, beauty, and goodness; correlated in personality as love, mercy, and ministry; disclosed on impersonal levels as justice, power, and sovereignty.
 \vs p000 1:18 Divinity may be perfect --- complete --- as on existential and creator levels of Paradise perfection; it may be imperfect, as on experiential and creature levels of time\hyp{}space evolution; or it may be relative, neither perfect nor imperfect, as on certain Havona levels of existential\hyp{}experiential relationships.
-\vs p000 1:19 \pc When we attempt to conceive of perfection in all phases and forms of relativity, we encounter seven conceivable types\fnst{\textbf{seven conceivable types}, The following list of seven elements contains all non-empty subsets ($2^3 - 1 = 7$) of the set (Absolute, Relative, Imperfection), listed in this particular order to reflect the inherent ordering of the three basic elements as follows: Absolute > Relative > Imperfection.}:
+\vs p000 1:19 \pc When we attempt to conceive of perfection in all phases and forms of relativity, we encounter seven conceivable types\fnst{\textbf{seven conceivable types}, The following list of seven elements is taken from \cite{Hartshorne1} and contains all non-empty subsets ($2^3 - 1 = 7$) of the set (Absolute, Relative, Imperfection), listed in this particular order to reflect the inherent ordering of the three basic elements as follows: Absolute > Relative > Imperfection.}:
 \vs p000 1:20 \ublistelem{1.}\bibnobreakspace Absolute perfection in all aspects.
 \vs p000 1:21 \ublistelem{2.}\bibnobreakspace Absolute perfection in some phases and relative perfection in all other aspects.
 \vs p000 1:22 \ublistelem{3.}\bibnobreakspace Absolute, relative, and imperfect aspects in varied association.
 \vs p000 1:23 \ublistelem{4.}\bibnobreakspace Absolute perfection in some respects, imperfection in all others.
-\vs p000 1:24 \ublistelem{5.}\bibnobreakspace Absolute perfection in no direction, relative perfection in all other manifestations.
+\vs p000 1:24 \ublistelem{5.}\bibnobreakspace Absolute perfection in no direction, relative perfection in all other\fnst{\textbf{other}, this word was removed from the second edition in 1967 and from all subsequent editions, probably to comply more closely with the human source \cite{Hartshorne1}. I chose to revert to the reading of the first 1955 edition.} manifestations.
 \vs p000 1:25 \ublistelem{6.}\bibnobreakspace Absolute perfection in no phase, relative in some, imperfect in others.
 \vs p000 1:26 \ublistelem{7.}\bibnobreakspace Absolute perfection in no attribute, imperfection in all.
 \usection{2.\bibnobreakspace God}
@@ -186,3 +186,9 @@
 \vsetoff
 \vs p000 12:14 [Indited by an Orvonton Divine Counsellor, Chief of the Corps of Superuniverse Personalities assigned to portray on Urantia the truth concerning the Paradise Deities and the universe of universes.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Hartshorne1}
+Charles Hartshorne.
+{``Man's Vision of God and the Logic of Theism.''}
+{\em Chicago: Willett, Clark \&\ Company}, 1941.
+\end{thebibliography}
