Add a macro for printing URLs

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1253,6 +1253,8 @@
    \end{center}%
 }
 
+\newcommand{\myurl}[1]{\href{#1}{#1}}
+
 \newcommand{\upaper}[2]{%
 \tunemarkup{papernewpage}{\newpage}%
 \thispagestyle{empty}%
