Print URLs in blue

--- a/ubook.sty
+++ b/ubook.sty
@@ -58,7 +58,7 @@
 \RequirePackage{lettrine}
 \setcounter{DefaultLines}{3}
 
-\RequirePackage[plainpages=false,hyperfootnotes=false,pdfpagelabels,colorlinks,linkcolor=black,anchorcolor=black,citecolor=black,filecolor=black,menucolor=black,pagecolor=black,urlcolor=black]{hyperref}
+\RequirePackage[plainpages=false,hyperfootnotes=false,pdfpagelabels,colorlinks,linkcolor=black,anchorcolor=black,citecolor=black,filecolor=black,menucolor=black,pagecolor=black,urlcolor=blue]{hyperref}
 
 \protected\def\bib@raise@anchor#1{%
   \ifhmode
